fixes to trainer modals on mobile

--- a/blitz/staticfiles/css/sass/style.scss
+++ b/blitz/staticfiles/css/sass/style.scss
@@ -5444,14 +5444,6 @@ span.sidebar-box-title {
   margin-bottom: 15px;
 }
 
-body > div.container > div:nth-child(2) > div > div > form > div:nth-child(3) > div.form-input > div > button > span.filter-option.pull-left, #modal > div > div > div.modal-body > div > div > div > div.content > form > div:nth-child(4) > div > button > span.filter-option.pull-left, #modal > div > div > div.modal-body > div > div > div > div.content > form > div:nth-child(5) > div > button > span.filter-option.pull-left {
-  text-align: center !important;
-  }
-
-body > div.container > div:nth-child(2) > div > div > form > table > tbody > tr:nth-child(1) > td:nth-child(2) > div {
-  //margin-left: 10px !important;
-}
-
 .input-row-fw {
   width: 100%;
   float: left;
